--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,3 +1,12 @@
 @media screen and (max-width:400px) {
-    
+    .nav-container{
+           flex-direction: column;
+     
+    }
+    .nav-item-container{
+        flex-direction: column;
+        gap: 36px;
+        width: 100%;
+        height: auto;
+    }
 }
