--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,6 +1,9 @@
 @media screen and (max-width:400px) {
     .nav-container{
            flex-direction: column;
+           gap: 40px;
+           align-items: center;
+           justify-content: center;
      
     }
     .nav-item-container{
