--- a/style/responsive.css
+++ b/style/responsive.css
@@ -93,39 +93,59 @@
       justify-content: center;
       align-items: center;
       text-align: center;
+      /* border: 2px solid green; */
    }
    .play-instantly{
-   
+    width: 100%;
+    height: auto;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    /* border: 2px solid blue; */
 }
     .play-right{
+        margin-top: 0px;
         /* flex-direction: column; */
-        width: 100%;
-        ?
+        width: 400px;
+        height: 900px;
          /* width: auto; */
-         margin-left:  100px;
+         /* margin-left:  100px; */
+         height: 500px;
+         padding-left: 40px;
+         /* border: 2px solid red; */
+         margin: 0px;
     }
 
     .play-left{
         width: 100%;
         text-align: center;
-        width: 461.751px;
+        width: 100%
         height: 238.163px;
         padding-left: 40px;
+        padding: 0px;
         margin-bottom: 200px;
-        margin: ;
-
+        margin-bottom: 100px ;
+        /* border: 2px solid yellow; */
+         
     }
     .img-1{
-        
-
+        width: 260px;
+        /* padding-left: 200px; */
+        height: 500px;
+        position: relative;
+        top: -50px;
+        left: -20px;
          
     }
     .img-2{
-        
+
+        width: 90px;
+        height: 200px;
+        width: 20%;
+        position: relative;
+        left: -100px;
+       
     }
 
  
