--- a/style/style.css
+++ b/style/style.css
@@ -382,6 +382,7 @@ margin-left: 100px;
   
 }
 
+
 .play-left{
     padding-right: 100px ;
     width: 50%;
@@ -399,5 +400,31 @@ margin-left: 100px;
     font-weight: 400;
 }
 
+/* iconns */
 
+.butt{
+    width: 243px;
+    height: 80px;
+    margin: 0px auto;
+    gap: 30px;
+}
+.ico{
+    width: 100%;
+    
+    justify-content: center;
+    align-items: center;
+
+    border: 2px solid blue;
+    justify-content: center;
+    align-items: center;
+}
+
+.ico-container{
+    border: 2px solid red;
+    grid-template-columns: repeat(4,243px);
+    margin-left: 0px;
+    margin: ;
+    height: auto;
+    width: auto;
+}
 
