--- a/style/style.css
+++ b/style/style.css
@@ -276,12 +276,174 @@ li {
     height: 400px;
 }
 
-.back {
+.Videos {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    transition: background-color 0.3s ease-in;
+  }
+  
+  .Videos:hover .overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .play-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    border-radius: 50%;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  .watch-now {
+    position: absolute;
+    top: 68%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 60px;
+    color: pink;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  
+  .Videos:hover .play-button, .Videos:hover .watch-now {
+    opacity: 1;
+  }
+  
+  .play-button::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-35%, -50%);
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 20px solid #000;
+  }
+  
+  .play-button::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-30%, -50%);
+    width: 10px;
+    height: 10px;
+    background-color: #000;
+    border-radius: 50%;
+  }
+  .watch-now::before {
+    position: absolute;
+    transform: translate(-35%, -50%);
+  }
+  
+  .watch-now::after {
+    position: absolute;
+    transform: translate(-30%, -50%);
+  }.image-container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    transition: background-color 0.3s ease-in;
+  }
+  
+  .Videos:hover .overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .play-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    border-radius: 50%;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  .watch-now {
+    position: absolute;
+    top: 68%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 60px;
+    color: pink;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  
+  .Videos:hover .play-button, .Videos:hover .watch-now {
+    opacity: 1;
+  }
+  
+  .play-button::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-35%, -50%);
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 20px solid #000;
+  }
+  
+  .play-button::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-30%, -50%);
+    width: 10px;
+    height: 10px;
+    background-color: #000;
+    border-radius: 50%;
+  }
+  .watch-now::before {
+    position: absolute;
+    transform: translate(-35%, -50%);
+  }
+  
+  .watch-now::after {
+    position: absolute;
+    transform: translate(-30%, -50%);
+  }
 
-    /* display: flex; */
-    /* justify-content: center;
+/* .back {
+
+    display: flex;
+    justify-content: center;
     align-content: center;
-    text-align: center; */
+    text-align: center;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -294,18 +456,18 @@ li {
     border-radius: 15px;
     background-size:cover;
 
-}
+} */
 /* .back>p{
 font-size: 20px;
 font-weight: 600;
 color: #FF42A5;
 } */
-.back>a:hover{
+/* .back>a:hover{
     font-size: 30px;
     width: 48px;
 height: 48px;
  
-}
+} */
 
 .onl-container> h2{
     color: #0B0223;
@@ -403,10 +565,27 @@ margin-left: 100px;
 /* iconns */
 
 .butt{
-    width: 243px;
-    height: 80px;
+    width: 280px;
+    /* height: 80px; */
     margin: 0px auto;
-    gap: 30px;
+    gap: 10px;
+    border-radius: 50px;
+background-color: #FFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 30px;
+border: none;
+font-size: 20px;
+font-weight: 600;
+cursor: pointer;
+}
+.butt:hover{
+    border: 1px solid #FF42A5;
+    transform: scale(5s);
+    font-size: large;
+    color: #FF42A5;
+    /* border-color: #FF42A5; */
 }
 .ico{
     width: 100%;
@@ -414,17 +593,88 @@ margin-left: 100px;
     justify-content: center;
     align-items: center;
 
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     justify-content: center;
     align-items: center;
+    padding-bottom: 30px;
 }
 
 .ico-container{
-    border: 2px solid red;
-    grid-template-columns: repeat(4,243px);
+    width: 100%;
+
+    display: flex;
+    /* border: 2px solid red; */
+    /* display: grid; */
+
+    /* grid-template-columns: repeat(4 , 1fr); */
     margin-left: 0px;
     margin: ;
     height: auto;
     width: auto;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+    gap: 30px;
+}
+
+
+/* footer */
+.he>a{
+    text-decoration: none;
+    margin-right: 30px;
+    
+    color: #FFF;
+    /* text-align: center; */
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 50px;
+
+
+}
+.foot{
+    background-color: #0B0223;
+    justify-content: center;
+    /* align-items: center; */
+    text-align: center;
+}
+
+.footer-con >p{
+    color: white;
+
+}
+.footer-con{
+    display: flex;
+    align-items: center;
+    text-align: center;
+font-size: 45px;
+font-weight: 700;
+justify-content: center;
+/* padding-left: 450px; */
+
+}
+.co{ padding-top: 30px;
+}
+.co>a{
+    padding-right: 20px;
+    text-decoration: none;
+    width: 150px;
+   height: 150px;
+}
+.do{
+    
+}
+.do>a{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.60);
+text-align: center;
+font-size: 16px;
+font-weight: 500;
+}
+.foot>p{
+    color: rgba(255, 255, 255, 0.60);
+font-size: 16px;
+font-weight: 500;
+ padding-bottom: 100px;
+ margin-bottom: 0px;
 }
 
